Backend/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CORDER
    CORIZQ
    RBREAK
    RCONCAT
    RCONTINUE
    RINTERFACE
    RSPLIT
    RTOEXPONENTIAL
    RTOFIXED
    RTOLOWERCASE
    RTOSTRING
    RTUPPERCASE
    RWHILE

Grammar

Rule 0     S' -> init
Rule 1     init -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> imprimir PTCOMA
Rule 5     instruccion -> declaracion_normal PTCOMA
Rule 6     instruccion -> condicional_ifs PTCOMA
Rule 7     instruccion -> ciclo_for PTCOMA
Rule 8     instruccion -> funcion PTCOMA
Rule 9     instruccion -> llamada_funcion PTCOMA
Rule 10    instruccion -> r_return PTCOMA
Rule 11    instruccion -> asignacion PTCOMA
Rule 12    instruccion -> imprimir
Rule 13    instruccion -> declaracion_normal
Rule 14    instruccion -> condicional_ifs
Rule 15    instruccion -> ciclo_for
Rule 16    instruccion -> funcion
Rule 17    instruccion -> llamada_funcion
Rule 18    instruccion -> r_return
Rule 19    instruccion -> asignacion
Rule 20    imprimir -> RCONSOLE PUNTO RLOG PARIZQ lista_parametros PARDER
Rule 21    asignacion -> ID IGUAL expresion
Rule 22    declaracion_normal -> RLET ID DOSPUNTOS tipo IGUAL expresion
Rule 23    declaracion_normal -> RLET ID IGUAL expresion
Rule 24    funcion -> RFUNCTION ID PARIZQ PARDER LLAVEIZQ instrucciones LLAVEDER
Rule 25    llamada_funcion -> ID PARIZQ PARDER
Rule 26    expresion -> llamada_funcion
Rule 27    r_return -> RRETURN expresion
Rule 28    condicional_ifs -> RIF condicional_if
Rule 29    condicional_if -> PARIZQ expresion PARDER LLAVEIZQ instrucciones LLAVEDER
Rule 30    condicional_if -> PARIZQ expresion PARDER LLAVEIZQ instrucciones LLAVEDER RELSE LLAVEIZQ instrucciones LLAVEDER
Rule 31    condicional_if -> PARIZQ expresion PARDER LLAVEIZQ instrucciones LLAVEDER RELSE RIF condicional_if
Rule 32    ciclo_for -> RFOR PARIZQ declaracion_normal PTCOMA expresion PTCOMA expresion PARDER LLAVEIZQ instrucciones LLAVEDER
Rule 33    tipo -> RSTRING
Rule 34    tipo -> RNUMBER
Rule 35    tipo -> RBOOLEAN
Rule 36    expresion -> expresion MAS expresion
Rule 37    expresion -> expresion MENOS expresion
Rule 38    expresion -> expresion POR expresion
Rule 39    expresion -> expresion DIV expresion
Rule 40    expresion -> expresion IGUALDAD expresion
Rule 41    expresion -> expresion DESIGUALDAD expresion
Rule 42    expresion -> expresion MAYORQ expresion
Rule 43    expresion -> expresion MENORQ expresion
Rule 44    expresion -> expresion MAYORIGUAL expresion
Rule 45    expresion -> expresion MENORIGUAL expresion
Rule 46    expresion -> expresion AND expresion
Rule 47    expresion -> expresion OR expresion
Rule 48    expresion -> expresion POT expresion
Rule 49    expresion -> expresion MOD expresion
Rule 50    expresion -> MENOS expresion
Rule 51    expresion -> NOT expresion
Rule 52    expresion -> expresion MAS MAS
Rule 53    expresion -> expresion MENOS MENOS
Rule 54    expresion -> ID
Rule 55    expresion -> RNULL
Rule 56    expresion -> RANY
Rule 57    expresion -> ENTERO
Rule 58    expresion -> DECIMAL
Rule 59    expresion -> CADENA
Rule 60    expresion -> RTRUE
Rule 61    expresion -> RFALSE
Rule 62    lista_parametros -> lista_parametros COMA parametro_lista
Rule 63    lista_parametros -> parametro_lista
Rule 64    parametro_lista -> expresion

Terminals, with rules where they appear

AND                  : 46
CADENA               : 59
COMA                 : 62
CORDER               : 
CORIZQ               : 
DECIMAL              : 58
DESIGUALDAD          : 41
DIV                  : 39
DOSPUNTOS            : 22
ENTERO               : 57
ID                   : 21 22 23 24 25 54
IGUAL                : 21 22 23
IGUALDAD             : 40
LLAVEDER             : 24 29 30 30 31 32
LLAVEIZQ             : 24 29 30 30 31 32
MAS                  : 36 52 52
MAYORIGUAL           : 44
MAYORQ               : 42
MENORIGUAL           : 45
MENORQ               : 43
MENOS                : 37 50 53 53
MOD                  : 49
NOT                  : 51
OR                   : 47
PARDER               : 20 24 25 29 30 31 32
PARIZQ               : 20 24 25 29 30 31 32
POR                  : 38
POT                  : 48
PTCOMA               : 4 5 6 7 8 9 10 11 32 32
PUNTO                : 20
RANY                 : 56
RBOOLEAN             : 35
RBREAK               : 
RCONCAT              : 
RCONSOLE             : 20
RCONTINUE            : 
RELSE                : 30 31
RFALSE               : 61
RFOR                 : 32
RFUNCTION            : 24
RIF                  : 28 31
RINTERFACE           : 
RLET                 : 22 23
RLOG                 : 20
RNULL                : 55
RNUMBER              : 34
RRETURN              : 27
RSPLIT               : 
RSTRING              : 33
RTOEXPONENTIAL       : 
RTOFIXED             : 
RTOLOWERCASE         : 
RTOSTRING            : 
RTRUE                : 60
RTUPPERCASE          : 
RWHILE               : 
error                : 

Nonterminals, with rules where they appear

asignacion           : 11 19
ciclo_for            : 7 15
condicional_if       : 28 31
condicional_ifs      : 6 14
declaracion_normal   : 5 13 32
expresion            : 21 22 23 27 29 30 31 32 32 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 51 52 53 64
funcion              : 8 16
imprimir             : 4 12
init                 : 0
instruccion          : 2 3
instrucciones        : 1 2 24 29 30 30 31 32
lista_parametros     : 20 62
llamada_funcion      : 9 17 26
parametro_lista      : 62 63
r_return             : 10 18
tipo                 : 22

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . imprimir PTCOMA
    (5) instruccion -> . declaracion_normal PTCOMA
    (6) instruccion -> . condicional_ifs PTCOMA
    (7) instruccion -> . ciclo_for PTCOMA
    (8) instruccion -> . funcion PTCOMA
    (9) instruccion -> . llamada_funcion PTCOMA
    (10) instruccion -> . r_return PTCOMA
    (11) instruccion -> . asignacion PTCOMA
    (12) instruccion -> . imprimir
    (13) instruccion -> . declaracion_normal
    (14) instruccion -> . condicional_ifs
    (15) instruccion -> . ciclo_for
    (16) instruccion -> . funcion
    (17) instruccion -> . llamada_funcion
    (18) instruccion -> . r_return
    (19) instruccion -> . asignacion
    (20) imprimir -> . RCONSOLE PUNTO RLOG PARIZQ lista_parametros PARDER
    (22) declaracion_normal -> . RLET ID DOSPUNTOS tipo IGUAL expresion
    (23) declaracion_normal -> . RLET ID IGUAL expresion
    (28) condicional_ifs -> . RIF condicional_if
    (32) ciclo_for -> . RFOR PARIZQ declaracion_normal PTCOMA expresion PTCOMA expresion PARDER LLAVEIZQ instrucciones LLAVEDER
    (24) funcion -> . RFUNCTION ID PARIZQ PARDER LLAVEIZQ instrucciones LLAVEDER
    (25) llamada_funcion -> . ID PARIZQ PARDER
    (27) r_return -> . RRETURN expresion
    (21) asignacion -> . ID IGUAL expresion

    RCONSOLE        shift and go to state 12
    RLET            shift and go to state 13
    RIF             shift and go to state 15
    RFOR            shift and go to state 16
    RFUNCTION       shift and go to state 17
    ID              shift and go to state 14
    RRETURN         shift and go to state 18

    init                           shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    imprimir                       shift and go to state 4
    declaracion_normal             shift and go to state 5
    condicional_ifs                shift and go to state 6
    ciclo_for                      shift and go to state 7
    funcion                        shift and go to state 8
    llamada_funcion                shift and go to state 9
    r_return                       shift and go to state 10
    asignacion                     shift and go to state 11

state 1

    (0) S' -> init .



state 2

    (1) init -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . imprimir PTCOMA
    (5) instruccion -> . declaracion_normal PTCOMA
    (6) instruccion -> . condicional_ifs PTCOMA
    (7) instruccion -> . ciclo_for PTCOMA
    (8) instruccion -> . funcion PTCOMA
    (9) instruccion -> . llamada_funcion PTCOMA
    (10) instruccion -> . r_return PTCOMA
    (11) instruccion -> . asignacion PTCOMA
    (12) instruccion -> . imprimir
    (13) instruccion -> . declaracion_normal
    (14) instruccion -> . condicional_ifs
    (15) instruccion -> . ciclo_for
    (16) instruccion -> . funcion
    (17) instruccion -> . llamada_funcion
    (18) instruccion -> . r_return
    (19) instruccion -> . asignacion
    (20) imprimir -> . RCONSOLE PUNTO RLOG PARIZQ lista_parametros PARDER
    (22) declaracion_normal -> . RLET ID DOSPUNTOS tipo IGUAL expresion
    (23) declaracion_normal -> . RLET ID IGUAL expresion
    (28) condicional_ifs -> . RIF condicional_if
    (32) ciclo_for -> . RFOR PARIZQ declaracion_normal PTCOMA expresion PTCOMA expresion PARDER LLAVEIZQ instrucciones LLAVEDER
    (24) funcion -> . RFUNCTION ID PARIZQ PARDER LLAVEIZQ instrucciones LLAVEDER
    (25) llamada_funcion -> . ID PARIZQ PARDER
    (27) r_return -> . RRETURN expresion
    (21) asignacion -> . ID IGUAL expresion

    $end            reduce using rule 1 (init -> instrucciones .)
    RCONSOLE        shift and go to state 12
    RLET            shift and go to state 13
    RIF             shift and go to state 15
    RFOR            shift and go to state 16
    RFUNCTION       shift and go to state 17
    ID              shift and go to state 14
    RRETURN         shift and go to state 18

    instruccion                    shift and go to state 19
    imprimir                       shift and go to state 4
    declaracion_normal             shift and go to state 5
    condicional_ifs                shift and go to state 6
    ciclo_for                      shift and go to state 7
    funcion                        shift and go to state 8
    llamada_funcion                shift and go to state 9
    r_return                       shift and go to state 10
    asignacion                     shift and go to state 11

state 3

    (3) instrucciones -> instruccion .

    RCONSOLE        reduce using rule 3 (instrucciones -> instruccion .)
    RLET            reduce using rule 3 (instrucciones -> instruccion .)
    RIF             reduce using rule 3 (instrucciones -> instruccion .)
    RFOR            reduce using rule 3 (instrucciones -> instruccion .)
    RFUNCTION       reduce using rule 3 (instrucciones -> instruccion .)
    ID              reduce using rule 3 (instrucciones -> instruccion .)
    RRETURN         reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)
    LLAVEDER        reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> imprimir . PTCOMA
    (12) instruccion -> imprimir .

    PTCOMA          shift and go to state 20
    RCONSOLE        reduce using rule 12 (instruccion -> imprimir .)
    RLET            reduce using rule 12 (instruccion -> imprimir .)
    RIF             reduce using rule 12 (instruccion -> imprimir .)
    RFOR            reduce using rule 12 (instruccion -> imprimir .)
    RFUNCTION       reduce using rule 12 (instruccion -> imprimir .)
    ID              reduce using rule 12 (instruccion -> imprimir .)
    RRETURN         reduce using rule 12 (instruccion -> imprimir .)
    $end            reduce using rule 12 (instruccion -> imprimir .)
    LLAVEDER        reduce using rule 12 (instruccion -> imprimir .)


state 5

    (5) instruccion -> declaracion_normal . PTCOMA
    (13) instruccion -> declaracion_normal .

    PTCOMA          shift and go to state 21
    RCONSOLE        reduce using rule 13 (instruccion -> declaracion_normal .)
    RLET            reduce using rule 13 (instruccion -> declaracion_normal .)
    RIF             reduce using rule 13 (instruccion -> declaracion_normal .)
    RFOR            reduce using rule 13 (instruccion -> declaracion_normal .)
    RFUNCTION       reduce using rule 13 (instruccion -> declaracion_normal .)
    ID              reduce using rule 13 (instruccion -> declaracion_normal .)
    RRETURN         reduce using rule 13 (instruccion -> declaracion_normal .)
    $end            reduce using rule 13 (instruccion -> declaracion_normal .)
    LLAVEDER        reduce using rule 13 (instruccion -> declaracion_normal .)


state 6

    (6) instruccion -> condicional_ifs . PTCOMA
    (14) instruccion -> condicional_ifs .

    PTCOMA          shift and go to state 22
    RCONSOLE        reduce using rule 14 (instruccion -> condicional_ifs .)
    RLET            reduce using rule 14 (instruccion -> condicional_ifs .)
    RIF             reduce using rule 14 (instruccion -> condicional_ifs .)
    RFOR            reduce using rule 14 (instruccion -> condicional_ifs .)
    RFUNCTION       reduce using rule 14 (instruccion -> condicional_ifs .)
    ID              reduce using rule 14 (instruccion -> condicional_ifs .)
    RRETURN         reduce using rule 14 (instruccion -> condicional_ifs .)
    $end            reduce using rule 14 (instruccion -> condicional_ifs .)
    LLAVEDER        reduce using rule 14 (instruccion -> condicional_ifs .)


state 7

    (7) instruccion -> ciclo_for . PTCOMA
    (15) instruccion -> ciclo_for .

    PTCOMA          shift and go to state 23
    RCONSOLE        reduce using rule 15 (instruccion -> ciclo_for .)
    RLET            reduce using rule 15 (instruccion -> ciclo_for .)
    RIF             reduce using rule 15 (instruccion -> ciclo_for .)
    RFOR            reduce using rule 15 (instruccion -> ciclo_for .)
    RFUNCTION       reduce using rule 15 (instruccion -> ciclo_for .)
    ID              reduce using rule 15 (instruccion -> ciclo_for .)
    RRETURN         reduce using rule 15 (instruccion -> ciclo_for .)
    $end            reduce using rule 15 (instruccion -> ciclo_for .)
    LLAVEDER        reduce using rule 15 (instruccion -> ciclo_for .)


state 8

    (8) instruccion -> funcion . PTCOMA
    (16) instruccion -> funcion .

    PTCOMA          shift and go to state 24
    RCONSOLE        reduce using rule 16 (instruccion -> funcion .)
    RLET            reduce using rule 16 (instruccion -> funcion .)
    RIF             reduce using rule 16 (instruccion -> funcion .)
    RFOR            reduce using rule 16 (instruccion -> funcion .)
    RFUNCTION       reduce using rule 16 (instruccion -> funcion .)
    ID              reduce using rule 16 (instruccion -> funcion .)
    RRETURN         reduce using rule 16 (instruccion -> funcion .)
    $end            reduce using rule 16 (instruccion -> funcion .)
    LLAVEDER        reduce using rule 16 (instruccion -> funcion .)


state 9

    (9) instruccion -> llamada_funcion . PTCOMA
    (17) instruccion -> llamada_funcion .

    PTCOMA          shift and go to state 25
    RCONSOLE        reduce using rule 17 (instruccion -> llamada_funcion .)
    RLET            reduce using rule 17 (instruccion -> llamada_funcion .)
    RIF             reduce using rule 17 (instruccion -> llamada_funcion .)
    RFOR            reduce using rule 17 (instruccion -> llamada_funcion .)
    RFUNCTION       reduce using rule 17 (instruccion -> llamada_funcion .)
    ID              reduce using rule 17 (instruccion -> llamada_funcion .)
    RRETURN         reduce using rule 17 (instruccion -> llamada_funcion .)
    $end            reduce using rule 17 (instruccion -> llamada_funcion .)
    LLAVEDER        reduce using rule 17 (instruccion -> llamada_funcion .)


state 10

    (10) instruccion -> r_return . PTCOMA
    (18) instruccion -> r_return .

    PTCOMA          shift and go to state 26
    RCONSOLE        reduce using rule 18 (instruccion -> r_return .)
    RLET            reduce using rule 18 (instruccion -> r_return .)
    RIF             reduce using rule 18 (instruccion -> r_return .)
    RFOR            reduce using rule 18 (instruccion -> r_return .)
    RFUNCTION       reduce using rule 18 (instruccion -> r_return .)
    ID              reduce using rule 18 (instruccion -> r_return .)
    RRETURN         reduce using rule 18 (instruccion -> r_return .)
    $end            reduce using rule 18 (instruccion -> r_return .)
    LLAVEDER        reduce using rule 18 (instruccion -> r_return .)


state 11

    (11) instruccion -> asignacion . PTCOMA
    (19) instruccion -> asignacion .

    PTCOMA          shift and go to state 27
    RCONSOLE        reduce using rule 19 (instruccion -> asignacion .)
    RLET            reduce using rule 19 (instruccion -> asignacion .)
    RIF             reduce using rule 19 (instruccion -> asignacion .)
    RFOR            reduce using rule 19 (instruccion -> asignacion .)
    RFUNCTION       reduce using rule 19 (instruccion -> asignacion .)
    ID              reduce using rule 19 (instruccion -> asignacion .)
    RRETURN         reduce using rule 19 (instruccion -> asignacion .)
    $end            reduce using rule 19 (instruccion -> asignacion .)
    LLAVEDER        reduce using rule 19 (instruccion -> asignacion .)


state 12

    (20) imprimir -> RCONSOLE . PUNTO RLOG PARIZQ lista_parametros PARDER

    PUNTO           shift and go to state 28


state 13

    (22) declaracion_normal -> RLET . ID DOSPUNTOS tipo IGUAL expresion
    (23) declaracion_normal -> RLET . ID IGUAL expresion

    ID              shift and go to state 29


state 14

    (25) llamada_funcion -> ID . PARIZQ PARDER
    (21) asignacion -> ID . IGUAL expresion

    PARIZQ          shift and go to state 30
    IGUAL           shift and go to state 31


state 15

    (28) condicional_ifs -> RIF . condicional_if
    (29) condicional_if -> . PARIZQ expresion PARDER LLAVEIZQ instrucciones LLAVEDER
    (30) condicional_if -> . PARIZQ expresion PARDER LLAVEIZQ instrucciones LLAVEDER RELSE LLAVEIZQ instrucciones LLAVEDER
    (31) condicional_if -> . PARIZQ expresion PARDER LLAVEIZQ instrucciones LLAVEDER RELSE RIF condicional_if

    PARIZQ          shift and go to state 33

    condicional_if                 shift and go to state 32

state 16

    (32) ciclo_for -> RFOR . PARIZQ declaracion_normal PTCOMA expresion PTCOMA expresion PARDER LLAVEIZQ instrucciones LLAVEDER

    PARIZQ          shift and go to state 34


state 17

    (24) funcion -> RFUNCTION . ID PARIZQ PARDER LLAVEIZQ instrucciones LLAVEDER

    ID              shift and go to state 35


state 18

    (27) r_return -> RRETURN . expresion
    (26) expresion -> . llamada_funcion
    (36) expresion -> . expresion MAS expresion
    (37) expresion -> . expresion MENOS expresion
    (38) expresion -> . expresion POR expresion
    (39) expresion -> . expresion DIV expresion
    (40) expresion -> . expresion IGUALDAD expresion
    (41) expresion -> . expresion DESIGUALDAD expresion
    (42) expresion -> . expresion MAYORQ expresion
    (43) expresion -> . expresion MENORQ expresion
    (44) expresion -> . expresion MAYORIGUAL expresion
    (45) expresion -> . expresion MENORIGUAL expresion
    (46) expresion -> . expresion AND expresion
    (47) expresion -> . expresion OR expresion
    (48) expresion -> . expresion POT expresion
    (49) expresion -> . expresion MOD expresion
    (50) expresion -> . MENOS expresion
    (51) expresion -> . NOT expresion
    (52) expresion -> . expresion MAS MAS
    (53) expresion -> . expresion MENOS MENOS
    (54) expresion -> . ID
    (55) expresion -> . RNULL
    (56) expresion -> . RANY
    (57) expresion -> . ENTERO
    (58) expresion -> . DECIMAL
    (59) expresion -> . CADENA
    (60) expresion -> . RTRUE
    (61) expresion -> . RFALSE
    (25) llamada_funcion -> . ID PARIZQ PARDER

    MENOS           shift and go to state 38
    NOT             shift and go to state 39
    ID              shift and go to state 40
    RNULL           shift and go to state 41
    RANY            shift and go to state 42
    ENTERO          shift and go to state 43
    DECIMAL         shift and go to state 44
    CADENA          shift and go to state 45
    RTRUE           shift and go to state 46
    RFALSE          shift and go to state 47

    expresion                      shift and go to state 36
    llamada_funcion                shift and go to state 37

state 19

    (2) instrucciones -> instrucciones instruccion .

    RCONSOLE        reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RLET            reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RIF             reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RFOR            reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RFUNCTION       reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    ID              reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RRETURN         reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    $end            reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    LLAVEDER        reduce using rule 2 (instrucciones -> instrucciones instruccion .)


state 20

    (4) instruccion -> imprimir PTCOMA .

    RCONSOLE        reduce using rule 4 (instruccion -> imprimir PTCOMA .)
    RLET            reduce using rule 4 (instruccion -> imprimir PTCOMA .)
    RIF             reduce using rule 4 (instruccion -> imprimir PTCOMA .)
    RFOR            reduce using rule 4 (instruccion -> imprimir PTCOMA .)
    RFUNCTION       reduce using rule 4 (instruccion -> imprimir PTCOMA .)
    ID              reduce using rule 4 (instruccion -> imprimir PTCOMA .)
    RRETURN         reduce using rule 4 (instruccion -> imprimir PTCOMA .)
    $end            reduce using rule 4 (instruccion -> imprimir PTCOMA .)
    LLAVEDER        reduce using rule 4 (instruccion -> imprimir PTCOMA .)


state 21

    (5) instruccion -> declaracion_normal PTCOMA .

    RCONSOLE        reduce using rule 5 (instruccion -> declaracion_normal PTCOMA .)
    RLET            reduce using rule 5 (instruccion -> declaracion_normal PTCOMA .)
    RIF             reduce using rule 5 (instruccion -> declaracion_normal PTCOMA .)
    RFOR            reduce using rule 5 (instruccion -> declaracion_normal PTCOMA .)
    RFUNCTION       reduce using rule 5 (instruccion -> declaracion_normal PTCOMA .)
    ID              reduce using rule 5 (instruccion -> declaracion_normal PTCOMA .)
    RRETURN         reduce using rule 5 (instruccion -> declaracion_normal PTCOMA .)
    $end            reduce using rule 5 (instruccion -> declaracion_normal PTCOMA .)
    LLAVEDER        reduce using rule 5 (instruccion -> declaracion_normal PTCOMA .)


state 22

    (6) instruccion -> condicional_ifs PTCOMA .

    RCONSOLE        reduce using rule 6 (instruccion -> condicional_ifs PTCOMA .)
    RLET            reduce using rule 6 (instruccion -> condicional_ifs PTCOMA .)
    RIF             reduce using rule 6 (instruccion -> condicional_ifs PTCOMA .)
    RFOR            reduce using rule 6 (instruccion -> condicional_ifs PTCOMA .)
    RFUNCTION       reduce using rule 6 (instruccion -> condicional_ifs PTCOMA .)
    ID              reduce using rule 6 (instruccion -> condicional_ifs PTCOMA .)
    RRETURN         reduce using rule 6 (instruccion -> condicional_ifs PTCOMA .)
    $end            reduce using rule 6 (instruccion -> condicional_ifs PTCOMA .)
    LLAVEDER        reduce using rule 6 (instruccion -> condicional_ifs PTCOMA .)


state 23

    (7) instruccion -> ciclo_for PTCOMA .

    RCONSOLE        reduce using rule 7 (instruccion -> ciclo_for PTCOMA .)
    RLET            reduce using rule 7 (instruccion -> ciclo_for PTCOMA .)
    RIF             reduce using rule 7 (instruccion -> ciclo_for PTCOMA .)
    RFOR            reduce using rule 7 (instruccion -> ciclo_for PTCOMA .)
    RFUNCTION       reduce using rule 7 (instruccion -> ciclo_for PTCOMA .)
    ID              reduce using rule 7 (instruccion -> ciclo_for PTCOMA .)
    RRETURN         reduce using rule 7 (instruccion -> ciclo_for PTCOMA .)
    $end            reduce using rule 7 (instruccion -> ciclo_for PTCOMA .)
    LLAVEDER        reduce using rule 7 (instruccion -> ciclo_for PTCOMA .)


state 24

    (8) instruccion -> funcion PTCOMA .

    RCONSOLE        reduce using rule 8 (instruccion -> funcion PTCOMA .)
    RLET            reduce using rule 8 (instruccion -> funcion PTCOMA .)
    RIF             reduce using rule 8 (instruccion -> funcion PTCOMA .)
    RFOR            reduce using rule 8 (instruccion -> funcion PTCOMA .)
    RFUNCTION       reduce using rule 8 (instruccion -> funcion PTCOMA .)
    ID              reduce using rule 8 (instruccion -> funcion PTCOMA .)
    RRETURN         reduce using rule 8 (instruccion -> funcion PTCOMA .)
    $end            reduce using rule 8 (instruccion -> funcion PTCOMA .)
    LLAVEDER        reduce using rule 8 (instruccion -> funcion PTCOMA .)


state 25

    (9) instruccion -> llamada_funcion PTCOMA .

    RCONSOLE        reduce using rule 9 (instruccion -> llamada_funcion PTCOMA .)
    RLET            reduce using rule 9 (instruccion -> llamada_funcion PTCOMA .)
    RIF             reduce using rule 9 (instruccion -> llamada_funcion PTCOMA .)
    RFOR            reduce using rule 9 (instruccion -> llamada_funcion PTCOMA .)
    RFUNCTION       reduce using rule 9 (instruccion -> llamada_funcion PTCOMA .)
    ID              reduce using rule 9 (instruccion -> llamada_funcion PTCOMA .)
    RRETURN         reduce using rule 9 (instruccion -> llamada_funcion PTCOMA .)
    $end            reduce using rule 9 (instruccion -> llamada_funcion PTCOMA .)
    LLAVEDER        reduce using rule 9 (instruccion -> llamada_funcion PTCOMA .)


state 26

    (10) instruccion -> r_return PTCOMA .

    RCONSOLE        reduce using rule 10 (instruccion -> r_return PTCOMA .)
    RLET            reduce using rule 10 (instruccion -> r_return PTCOMA .)
    RIF             reduce using rule 10 (instruccion -> r_return PTCOMA .)
    RFOR            reduce using rule 10 (instruccion -> r_return PTCOMA .)
    RFUNCTION       reduce using rule 10 (instruccion -> r_return PTCOMA .)
    ID              reduce using rule 10 (instruccion -> r_return PTCOMA .)
    RRETURN         reduce using rule 10 (instruccion -> r_return PTCOMA .)
    $end            reduce using rule 10 (instruccion -> r_return PTCOMA .)
    LLAVEDER        reduce using rule 10 (instruccion -> r_return PTCOMA .)


state 27

    (11) instruccion -> asignacion PTCOMA .

    RCONSOLE        reduce using rule 11 (instruccion -> asignacion PTCOMA .)
    RLET            reduce using rule 11 (instruccion -> asignacion PTCOMA .)
    RIF             reduce using rule 11 (instruccion -> asignacion PTCOMA .)
    RFOR            reduce using rule 11 (instruccion -> asignacion PTCOMA .)
    RFUNCTION       reduce using rule 11 (instruccion -> asignacion PTCOMA .)
    ID              reduce using rule 11 (instruccion -> asignacion PTCOMA .)
    RRETURN         reduce using rule 11 (instruccion -> asignacion PTCOMA .)
    $end            reduce using rule 11 (instruccion -> asignacion PTCOMA .)
    LLAVEDER        reduce using rule 11 (instruccion -> asignacion PTCOMA .)


state 28

    (20) imprimir -> RCONSOLE PUNTO . RLOG PARIZQ lista_parametros PARDER

    RLOG            shift and go to state 48


state 29

    (22) declaracion_normal -> RLET ID . DOSPUNTOS tipo IGUAL expresion
    (23) declaracion_normal -> RLET ID . IGUAL expresion

    DOSPUNTOS       shift and go to state 49
    IGUAL           shift and go to state 50


state 30

    (25) llamada_funcion -> ID PARIZQ . PARDER

    PARDER          shift and go to state 51


state 31

    (21) asignacion -> ID IGUAL . expresion
    (26) expresion -> . llamada_funcion
    (36) expresion -> . expresion MAS expresion
    (37) expresion -> . expresion MENOS expresion
    (38) expresion -> . expresion POR expresion
    (39) expresion -> . expresion DIV expresion
    (40) expresion -> . expresion IGUALDAD expresion
    (41) expresion -> . expresion DESIGUALDAD expresion
    (42) expresion -> . expresion MAYORQ expresion
    (43) expresion -> . expresion MENORQ expresion
    (44) expresion -> . expresion MAYORIGUAL expresion
    (45) expresion -> . expresion MENORIGUAL expresion
    (46) expresion -> . expresion AND expresion
    (47) expresion -> . expresion OR expresion
    (48) expresion -> . expresion POT expresion
    (49) expresion -> . expresion MOD expresion
    (50) expresion -> . MENOS expresion
    (51) expresion -> . NOT expresion
    (52) expresion -> . expresion MAS MAS
    (53) expresion -> . expresion MENOS MENOS
    (54) expresion -> . ID
    (55) expresion -> . RNULL
    (56) expresion -> . RANY
    (57) expresion -> . ENTERO
    (58) expresion -> . DECIMAL
    (59) expresion -> . CADENA
    (60) expresion -> . RTRUE
    (61) expresion -> . RFALSE
    (25) llamada_funcion -> . ID PARIZQ PARDER

    MENOS           shift and go to state 38
    NOT             shift and go to state 39
    ID              shift and go to state 40
    RNULL           shift and go to state 41
    RANY            shift and go to state 42
    ENTERO          shift and go to state 43
    DECIMAL         shift and go to state 44
    CADENA          shift and go to state 45
    RTRUE           shift and go to state 46
    RFALSE          shift and go to state 47

    expresion                      shift and go to state 52
    llamada_funcion                shift and go to state 37

state 32

    (28) condicional_ifs -> RIF condicional_if .

    PTCOMA          reduce using rule 28 (condicional_ifs -> RIF condicional_if .)
    RCONSOLE        reduce using rule 28 (condicional_ifs -> RIF condicional_if .)
    RLET            reduce using rule 28 (condicional_ifs -> RIF condicional_if .)
    RIF             reduce using rule 28 (condicional_ifs -> RIF condicional_if .)
    RFOR            reduce using rule 28 (condicional_ifs -> RIF condicional_if .)
    RFUNCTION       reduce using rule 28 (condicional_ifs -> RIF condicional_if .)
    ID              reduce using rule 28 (condicional_ifs -> RIF condicional_if .)
    RRETURN         reduce using rule 28 (condicional_ifs -> RIF condicional_if .)
    $end            reduce using rule 28 (condicional_ifs -> RIF condicional_if .)
    LLAVEDER        reduce using rule 28 (condicional_ifs -> RIF condicional_if .)


state 33

    (29) condicional_if -> PARIZQ . expresion PARDER LLAVEIZQ instrucciones LLAVEDER
    (30) condicional_if -> PARIZQ . expresion PARDER LLAVEIZQ instrucciones LLAVEDER RELSE LLAVEIZQ instrucciones LLAVEDER
    (31) condicional_if -> PARIZQ . expresion PARDER LLAVEIZQ instrucciones LLAVEDER RELSE RIF condicional_if
    (26) expresion -> . llamada_funcion
    (36) expresion -> . expresion MAS expresion
    (37) expresion -> . expresion MENOS expresion
    (38) expresion -> . expresion POR expresion
    (39) expresion -> . expresion DIV expresion
    (40) expresion -> . expresion IGUALDAD expresion
    (41) expresion -> . expresion DESIGUALDAD expresion
    (42) expresion -> . expresion MAYORQ expresion
    (43) expresion -> . expresion MENORQ expresion
    (44) expresion -> . expresion MAYORIGUAL expresion
    (45) expresion -> . expresion MENORIGUAL expresion
    (46) expresion -> . expresion AND expresion
    (47) expresion -> . expresion OR expresion
    (48) expresion -> . expresion POT expresion
    (49) expresion -> . expresion MOD expresion
    (50) expresion -> . MENOS expresion
    (51) expresion -> . NOT expresion
    (52) expresion -> . expresion MAS MAS
    (53) expresion -> . expresion MENOS MENOS
    (54) expresion -> . ID
    (55) expresion -> . RNULL
    (56) expresion -> . RANY
    (57) expresion -> . ENTERO
    (58) expresion -> . DECIMAL
    (59) expresion -> . CADENA
    (60) expresion -> . RTRUE
    (61) expresion -> . RFALSE
    (25) llamada_funcion -> . ID PARIZQ PARDER

    MENOS           shift and go to state 38
    NOT             shift and go to state 39
    ID              shift and go to state 40
    RNULL           shift and go to state 41
    RANY            shift and go to state 42
    ENTERO          shift and go to state 43
    DECIMAL         shift and go to state 44
    CADENA          shift and go to state 45
    RTRUE           shift and go to state 46
    RFALSE          shift and go to state 47

    expresion                      shift and go to state 53
    llamada_funcion                shift and go to state 37

state 34

    (32) ciclo_for -> RFOR PARIZQ . declaracion_normal PTCOMA expresion PTCOMA expresion PARDER LLAVEIZQ instrucciones LLAVEDER
    (22) declaracion_normal -> . RLET ID DOSPUNTOS tipo IGUAL expresion
    (23) declaracion_normal -> . RLET ID IGUAL expresion

    RLET            shift and go to state 13

    declaracion_normal             shift and go to state 54

state 35

    (24) funcion -> RFUNCTION ID . PARIZQ PARDER LLAVEIZQ instrucciones LLAVEDER

    PARIZQ          shift and go to state 55


state 36
